--- a/css/styles.css
+++ b/css/styles.css
@@ -36,10 +36,13 @@ img {
   display: block;
 }
 .container {
-  width: 1158px;
+  /* width: 1158px; */
+  max-width: 396px;
   margin: 0 auto;
-  padding-left: 15px;
-  padding-right: 15px;
+  /* padding: 20px; */
+  padding: 0;
+  /* padding-left: 15px;
+  padding-right: 15px; */
 }
 .visually-hidden {
   position: absolute;
@@ -58,26 +61,47 @@ img {
 
 .theheader {
   border-bottom: 1px solid var(--border-color);
-  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+  /* box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08); */
 }
 .index-header {
   display: flex;
   align-items: center;
+  justify-content:space-between;
+  padding: 24px 16px;
+  
+  
 }
 .logo {
   margin-right: 76px;
 }
+.hamburger-icon
+{
+  stroke: black;
+  align-self:baseline;
+}
+.logo-top
+{
+
+}
 .index-nav {
   display: flex;
-  align-items: center;
-  flex-grow: 1;
+  /* align-items: center; */
+  /* flex-grow: 1; */
 }
 .nav-menu,
 .adresse {
   display: flex;
   gap: 40px;
+
 }
+
+
+
+
+
+
+
 
 .addresse {
   display: flex;
@@ -136,11 +160,14 @@ nav {
 }
 
 .contact-list-item {
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
+  /* font-size: 16px; */
+  font-size: 12px;
+  line-height: 1.67;
+letter-spacing: 0.48px;
+  /* line-height: 1.5;
+  letter-spacing: 0.02em; */
   color: var(--main-text-color);
-  padding: 24px 0;
+  /* padding: 24px 0; */
   transition: color 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -152,25 +179,37 @@ nav {
 /*section 1 index SOLUTIONS*/
 .solutions {
   background: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-    url(../images/people-office.jpg);
+    url(../images/mobile-bg.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-color: var(--accent-color);
   background-size: cover;
   text-align: center;
-  padding: 188px 0;
+  /* padding: 188px 0; */
   max-width: 1440px;
   margin: 0 auto;
+  height: 432px; /* mobile-only*/
+  padding: 112px 0;
+}
+@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (mind-resolution: 2dppx)
+{
+  .solutions {
+    background: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+      url(../images/mobile-bg@2x.jpg);
+  }
 }
 
+
 .solutions-title {
-  font-size: 56px;
-  line-height: 1.07;
   color: var(--whity-color);
-  letter-spacing: 0.02em;
-  max-width: 496px;
+  max-width: 320px;
   text-align: center;
-  margin: auto;
+  margin: 0 auto 72px auto;
+
+  font-size: 36px;
+font-weight: 700;
+line-height: 1.11;
+letter-spacing: 0.72px;
 }
 .solutions-button {
   color: var(--whity-color);
@@ -186,7 +225,7 @@ nav {
   height: 56px;
   display: block;
   border: none;
-  margin: 48px auto 0 auto;
+  margin: 0 auto; /* TODO fix 48px margin desktop*/
   transition: background-color 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -196,20 +235,23 @@ nav {
 }
 /*section 2 index*/
 .values {
-  padding: 120px 0;
+  padding-top: 96px;
+  padding-bottom: 96px;
 }
 .values-list {
   display: flex;
-  gap: 24px;
+  gap: 72px;
+  flex-wrap: wrap;
 }
 
 .values-list-item {
-  flex-basis: calc((100% - 72px) / 4);
+  flex-basis: 100%;
 }
 
 .box-for-icon {
   width: 264px;
   height: 112px;
+
   background: var(--greyish-color);
   border-radius: 4px;
   margin-bottom: 8px;
@@ -222,17 +264,25 @@ nav {
   display: block;
 }
 .values-title {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
+
+  font-size: 36px;
+
+  font-weight: 700;
+  line-height: 1.11;
+  letter-spacing: 0.72px;
+text-align: center;
   color: var(--accent-color);
   margin-bottom: 8px;
 }
 .values-text {
   font-size: 16px;
   line-height: 1.5;
-  letter-spacing: 0.02em;
+
+
+font-weight: 500;
+
+
+letter-spacing: 0.32px;
 }
 
 /*section 3 index*/
@@ -252,6 +302,7 @@ nav {
 .what-we-do-list {
   display: flex;
   gap: 24px;
+  justify-content: center;
 }
 
 .what-we-do-list-item {
@@ -262,6 +313,7 @@ nav {
 .team {
   background-color: var(--greyish-color);
   padding: 120px 0;
+  justify-content: center;
 }
 
 .team-card {
@@ -269,11 +321,14 @@ nav {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   border-radius: 0px 0px 4px 4px;
-  width: calc((100% - 72px) / 4);
+  width: 264px;
+
 }
 .team-card-list {
   display: flex;
-  gap: 24px;
+   gap: 72px;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .team-card-txt {
@@ -331,19 +386,24 @@ nav {
 
 /*section 5 index */
 .customers {
-  padding: 120px 0;
+  /* padding: 120px 0; */
+  padding-top: 96px;
+  padding-bottom: 96px;
 }
 .customers-list {
   display: flex;
-  gap: 24px;
+  column-gap: 16px;
+  row-gap: 72px;
+  flex-wrap: wrap;
 }
 .customers-list-item {
   height: 88px;
-  width: calc((100% - 120px) / 6);
+   width: calc((100% - 16px) / 2)
 }
 .customers-box {
   height: 100%;
-  width: 100%;
+ width: 100%; 
+  
   border: 1px solid var(--customer-color);
   border-radius: 4px;
   display: flex;
@@ -371,31 +431,35 @@ nav {
 /* footer */
 .bottom {
   background-color: var(--accent-color);
-  padding: 100px 0;
+  /* padding: 100px 0; */
+  padding-top: 96px;
+  padding-bottom: 96px;
 }
 .index-footer {
   display: flex;
-  align-items: baseline;
+  flex-wrap: wrap;
+  /* align-items: baseline; */
+  align-items: center;
+  justify-content: center;
 }
-.par1footer {
-  margin-right: 120px;
-}
+
 .logo-studio-footer {
   color: var(--greyish-color);
-}
+  }
 .bottom-text {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--greyish-color);
   max-width: 264px;
-  margin-top: 17.5px;
+  padding-bottom: 72px; /*mobile-only*/
+ 
 }
 
 .social-bottom {
   padding: 0;
   gap: 16px;
-  margin-right: 80px;
+  /* margin-right: 80px; */
 }
 .bottom-circle:hover,
 .bottom-circle:focus {
@@ -410,27 +474,38 @@ nav {
   color: var(--whity-color);
   margin-bottom: 16px;
   display: block;
-}
+  text-align: center; /*mobile-only*/
+  }
 
 .subscribe-list
 {
   display: flex;
-  align-items:baseline;
+  /* align-items:baseline;*/
   gap: 24px;
+  flex-direction: column;
+  justify-content: center;
+  
+
+
+}
+.subscribe-footer
+{
+    width: 100%;
 }
 .footer-mail
 {background-color: transparent;
   border: 1px solid #FFFFFF;
 filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 border-radius: 4px;
-width: 264px;
+
 height: 40px;
 padding-left:16px;
 color: var(--whity-color);
   font-size: 12px;
 line-height: 1.5;
 letter-spacing: 0.04em
-;}
+;
+width: 100%;/*mobile-only*/}
 .footer-mail::placeholder
 {
   font-size: 12px;
@@ -446,11 +521,18 @@ color: var(--whity-color);
 display: flex;
   justify-content: center;
   align-items: center;
-padding: 8px 16px;
-min-width: 165px;
+/* padding: 8px 16px; */
+padding: 8px 24px;
+/* min-width: 165px; */
+width: 117px;
 height: 40px;
-margin: 0;
+margin: 0 auto;
 }
+
+.logo-bottom
+{margin: 0;
+text-align: center;
+margin-bottom: 17.5px; /*mobile-only*/} /* mobile-only */
 
 
 
@@ -461,6 +543,10 @@ fill: var(--whity-color);
 margin-left: 16px;
 }
 
+.social-media-footer
+{
+  margin-bottom: 72px;/*mobile-only*/
+}
 /* main styling portfolio */
 
 .portfolio-main-section {
@@ -764,4 +850,373 @@ margin-right: 8px;
 .privacylink
 {
   color: var(--logolike-color);
+}
+
+.btn-hamburger
+{
+  border:none;
+  background-color: transparent;
+}
+.menu-window
+{display: flex;}
+.mob-menu
+{
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  background-color: var(--whity-color);
+  top: 0;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding-top: 80px;
+  padding-left: 40px;
+  overflow: auto;
+}
+
+
+
+.nav-list-item-mobile
+{
+  font-size: 36px;
+font-weight: 700;
+line-height: 40px;
+letter-spacing: 0.72px;
+text-transform: capitalize;
+color: var(--accent-color);
+margin-bottom: 40px;
+}
+.mobile-active
+{
+  color: var(--hover-color);
+}
+.social-list-menu
+{
+margin: 0 40px 40px 0;
+justify-content: space-between;
+bottom: 0;
+
+
+
+}
+.phone-mobile
+{
+  color: var(--logolike-color);
+  font-size: 36px;
+font-weight: 700;
+line-height: 40px;
+letter-spacing: 0.72px;
+text-transform: capitalize;
+font-style: normal;
+margin-bottom: 40px;
+}
+
+.mail-mobile
+{
+color: var(--main-text-color);
+  font-size: 20px;
+font-weight: 500;
+line-height: 24px;
+letter-spacing: 0.4px;
+font-style: normal;
+margin-bottom: 48px;
+}
+
+
+@media (min-width: 428px)
+{
+  .container
+  {
+    max-width: 396px;
+  }
+
+  .index-header
+  {
+    max-width: unset;
+  }
+}
+
+@media (max-width: 768px) /*to hide nav and adress on mobile ==768px is empty for some reason, to be fixed*/
+ { .nav-menu,
+.adresse {
+display: none;
+}
+} 
+
+@media (min-width: 768px) 
+{
+  .container
+  {
+    max-width: 736px;
+  }
+
+  .solutions {
+    background: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+      url(../images/tablet-bg.jpg);
+      background-repeat: no-repeat;
+      background-position: center;
+      background-color: var(--accent-color);
+      background-size: cover;
+  }
+  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (mind-resolution: 2dppx)
+  {
+    .solutions {
+      background: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+        url(../images/tablet-bg@2x.jpg);
+    }
+  }
+  .index-header
+  {
+    max-width: unset;
+    padding: 0 16px;
+  }
+
+  .hamburger-icon, .btn-hamburger /* to hide hamburger on tablet and PC*/
+  {
+display: none;
+  }
+
+  .index-nav {
+    align-items: center;
+    flex-grow: 1;
+  }
+
+
+.adresse {
+    flex-direction: column;
+  gap: 12px;
+
+}
+
+.solutions-title {
+  font-size: 56px;
+  line-height: 1.07;
+  
+  letter-spacing: 0.02em;
+  max-width: 496px;
+  margin-bottom: 36px;
+}
+
+.values-list-item {
+  flex-basis: calc((100% - 24px) / 2);
+
+}
+.values-list
+{
+  column-gap: 24px;
+  row-gap: 72px;
+}
+
+.team-card-list
+{
+column-gap: 24px;
+row-gap: 64px;
+
+}
+
+.index-customers
+{
+  max-width: 552px;
+}
+.customers-list-item {
+
+   width: calc((100% - 48px) / 3);
+}
+
+.customers-list {
+  
+  column-gap: 24px;
+  row-gap: 88px;
+  
+}
+
+.index-footer
+{
+  max-width: 552px;
+  padding: 0;
+  margin: auto; 
+align-items: flex-start;
+}
+
+.par1footer,
+.social-media-footer
+{
+  width: calc((100% - 24px) / 2);
+}
+.top-line-bottom-tablet
+{
+  display: flex;
+  justify-content: space-between;
+  min-width: 552px;
+  margin-bottom: 72px;
+}
+
+.bottom-text, .social-media-footer
+{
+  padding: 0;
+  margin: 0;
+}
+
+.subscribe-footer
+{
+    
+
+    
+} 
+
+.footer-mail
+{
+width: 264px;
+}
+
+.logo-bottom,
+.footer-title
+{
+  text-align: left;
+}
+.subscribe-button
+{
+  margin: 0;
+}
+
+
+.social-bottom
+{
+  justify-content: left;
+}
+
+.subscribe-list
+{
+  flex-direction: row;
+justify-content: flex-start;
+}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (min-width: 1158px)
+
+{ 
+  .container {
+    max-width: 1158px;
+    margin: 0 auto;
+    /* padding-left: 15px;
+    padding-right: 15px; */
+  }
+  .solutions {
+    background: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+      url(../images/people-office.jpg);}
+
+      @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (mind-resolution: 2dppx)
+{
+  .solutions {
+    background: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+      url(../images/people-office@2x.jpg);
+  }
+}
+  
+  .adresse {
+    flex-direction: row;
+  }
+
+
+.solutions
+{
+  padding: 188px 0;
+  height: unset;
+}
+  
+    .solutions-title {
+      font-size: 56px;
+      line-height: 1.07;
+    
+      letter-spacing: 0.02em;
+      max-width: 496px;
+
+      margin-bottom: 48px;
+    }
+
+    .values-title {
+      font-weight: 500;
+      font-size: 20px;
+      line-height: 1.2;
+      letter-spacing: 0.02em;
+    }
+.index-values
+{
+  margin: 0 auto;
+}
+    .values-text
+    {
+           letter-spacing: 0.02em;
+      font-weight: 400;
+    }
+  
+.values-list
+{
+  width: 1158px;
+  align-items: center;
+}
+  .values-list-item {
+    flex-basis: calc((100% - 72px) / 4);
+  
+  }
+  .team-card-list
+  {
+    gap: 24px;
+  }
+.customers-list-item
+{
+  width: calc((100% - 120px) / 6)
+}
+
+.index-footer
+{
+  flex-wrap: nowrap;
+}
+
+.top-line-bottom-tablet
+{
+  min-width: unset;
+}
+.par1footer {
+  margin-right: 120px;
+width: 264px;
+
+}
+
+.social-bottom {
+
+  margin-right: 80px;
+}
+.bottom-text
+{
+  width: 264px;
+}
+}
+
+@media (max-width: 1158px)
+{
+  .what-we-do /* to hide section what are we doing*/
+  {
+display: none;
+  }
+
+.box-for-icon
+{
+/*to hide for mobile and tablet*/
+display: none;
+}
 }
