--- a/css/styles.css
+++ b/css/styles.css
@@ -41,8 +41,8 @@ img {
   margin: 0 auto;
   /* padding: 20px; */
   padding: 0;
-  /* padding-left: 15px;
-  padding-right: 15px; */
+  padding-left: 16px;
+  padding-right: 16px;
 }
 .visually-hidden {
   position: absolute;
@@ -196,6 +196,10 @@ letter-spacing: 0.48px;
   .solutions {
     background: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
       url(../images/mobile-bg@2x.jpg);
+      background-repeat: no-repeat;
+      background-position: center;
+      background-color: var(--accent-color);
+      background-size: cover;
   }
 }
 
@@ -452,7 +456,7 @@ letter-spacing: 0.32px;
   letter-spacing: 0.02em;
   color: var(--greyish-color);
   max-width: 264px;
-  padding-bottom: 72px; /*mobile-only*/
+  
  
 }
 
@@ -543,10 +547,12 @@ fill: var(--whity-color);
 margin-left: 16px;
 }
 
-.social-media-footer
+.top-line-bottom-tablet
 {
   margin-bottom: 72px;/*mobile-only*/
 }
+.par1footer {
+margin-bottom: 72px; }mobile-only
 /* main styling portfolio */
 
 .portfolio-main-section {
@@ -661,6 +667,7 @@ margin-left: 16px;
   background-color: rgba(46, 47, 66, 0.4);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .is-hidden {
@@ -674,7 +681,6 @@ margin-left: 16px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-  width: 408px;
   min-height: 584px;
   background: #fcfcfc;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
@@ -682,6 +688,7 @@ margin-left: 16px;
   border-radius: 4px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 72px 24px 24px 24px;
+  width: 90%;
 }
 
 .close-modal {
@@ -926,6 +933,10 @@ margin-bottom: 48px;
 
 @media (min-width: 428px)
 {
+  .modal-window {
+
+    width: 408px;
+  }
   .container
   {
     max-width: 396px;
@@ -937,19 +948,25 @@ margin-bottom: 48px;
   }
 }
 
-@media (max-width: 768px) /*to hide nav and adress on mobile ==768px is empty for some reason, to be fixed*/
- { .nav-menu,
+ .nav-menu,
 .adresse {
 display: none;
 }
-} 
+
 
 @media (min-width: 768px) 
 {
+
+  .nav-menu,
+    .adresse {
+    display: flex;
+    }
   .container
   {
     max-width: 736px;
   }
+  .par1footer {
+    margin-bottom: 0px; }
 
   .solutions {
     background: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
@@ -964,6 +981,10 @@ display: none;
     .solutions {
       background: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
         url(../images/tablet-bg@2x.jpg);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-color: var(--accent-color);
+        background-size: cover;
     }
   }
   .index-header
@@ -1049,8 +1070,7 @@ align-items: flex-start;
   display: flex;
   justify-content: space-between;
   min-width: 552px;
-  margin-bottom: 72px;
-}
+  }
 
 .bottom-text, .social-media-footer
 {
@@ -1112,25 +1132,43 @@ justify-content: flex-start;
   .container {
     max-width: 1158px;
     margin: 0 auto;
-    /* padding-left: 15px;
-    padding-right: 15px; */
+    padding-left: 15px;
+    padding-right: 15px;
   }
   .solutions {
     background: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-      url(../images/people-office.jpg);}
+      url(../images/people-office.jpg);
+      background-repeat: no-repeat;
+  background-position: center;
+  background-color: var(--accent-color);
+  background-size: cover;}
 
       @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (mind-resolution: 2dppx)
 {
   .solutions {
     background: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
       url(../images/people-office@2x.jpg);
+      background-repeat: no-repeat;
+      background-position: center;
+      background-color: var(--accent-color);
+      background-size: cover;
   }
 }
   
   .adresse {
     flex-direction: row;
+    gap: 40px;
   }
 
+  .contact-list-item {
+    font-size: 16px;
+
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+
+ 
+
+  }
 
 .solutions
 {
@@ -1205,6 +1243,12 @@ width: 264px;
 {
   width: 264px;
 }
+.top-line-bottom-tablet
+{
+  margin-bottom: 0px;/*mobile-only*/}
+
+
+
 }
 
 @media (max-width: 1158px)
@@ -1219,4 +1263,5 @@ display: none;
 /*to hide for mobile and tablet*/
 display: none;
 }
+
 }
